doc/windows/VB6.0/32bit/multi_card/gts.bas


Public Declare Function GT_AlarmOff Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer) As Integer
Public Declare Function GT_AlarmOn Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer) As Integer
Public Declare Function GT_LmtsOn Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, Optional ByVal limitType As Integer = -1) As Integer
Public Declare Function GT_LmtsOff Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, Optional ByVal limitType As Integer = -1) As Integer
Public Declare Function GT_ProfileScale Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal alpha As Integer, ByVal beta As Integer) As Integer
Public Declare Function GT_EncScale Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal alpha As Integer, ByVal beta As Integer) As Integer
Public Declare Function GT_StepDir Lib "gts.dll" (ByVal cardNum As Integer,ByVal step As Integer) As Integer
Public Declare Function GT_StepPulse Lib "gts.dll" (ByVal cardNum As Integer,ByVal step As Integer) As Integer
Public Declare Function GT_SetMtrBias Lib "gts.dll" (ByVal cardNum As Integer,ByVal dac As Integer, ByVal bias As Integer) As Integer
Public Declare Function GT_GetMtrBias Lib "gts.dll" (ByVal cardNum As Integer,ByVal dac As Integer, ByRef pBias As Integer) As Integer
Public Declare Function GT_SetMtrLmt Lib "gts.dll" (ByVal cardNum As Integer,ByVal dac As Integer, ByVal limit As Integer) As Integer
Public Declare Function GT_GetMtrLmt Lib "gts.dll" (ByVal cardNum As Integer,ByVal dac As Integer, ByRef pLimit As Integer) As Integer
Public Declare Function GT_EncSns Lib "gts.dll" (ByVal cardNum As Integer,ByVal sense As Integer) As Integer
Public Declare Function GT_EncOn Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer) As Integer
Public Declare Function GT_EncOff Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer) As Integer
Public Declare Function GT_SetPosErr Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer, ByVal iError As Long) As Integer
Public Declare Function GT_GetPosErr Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer, ByRef pError As Long) As Integer
Public Declare Function GT_SetStopDec Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal decSmoothStop As Double, ByVal decAbruptStop As Double) As Integer
Public Declare Function GT_GetStopDec Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pDecSmoothStop As Double, ByRef pDecAbruptStop As Double) As Integer
Public Declare Function GT_LmtSns Lib "gts.dll" (ByVal cardNum As Integer,ByVal sense As Integer) As Integer
Public Declare Function GT_CtrlMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal mode As Integer) As Integer
Public Declare Function GT_SetStopIo Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal stopType As Integer, ByVal inputType As Integer, ByVal inputIndex As Integer) As Integer
Public Declare Function GT_GpiSns Lib "gts.dll" (ByVal cardNum As Integer,ByVal sense As Integer) As Integer
Public Declare Function GT_SetAdcFilter Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal filterTime As Integer) As Integer
Public Declare Function GT_SetAxisPrfVelFilter Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal filterNumExp As Integer) As Integer
Public Declare Function GT_GetAxisPrfVelFilter Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pFilterNumExp As Integer) As Integer
Public Declare Function GT_SetAxisEncVelFilter Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal filterNumExp As Integer) As Integer
Public Declare Function GT_GetAxisEncVelFilter Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pFilterNumExp As Integer) As Integer
Public Declare Function GT_SetAxisInputShaping Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal enable As Integer, ByVal count As Integer, ByVal k As Double) As Integer

Public Declare Function GT_SetDo Lib "gts.dll" (ByVal cardNum As Integer,ByVal doType As Integer, ByVal value As Long) As Integer
Public Declare Function GT_SetDoBit Lib "gts.dll" (ByVal cardNum As Integer,ByVal doType As Integer, ByVal doIndex As Integer, ByVal value As Integer) As Integer
Public Declare Function GT_GetDo Lib "gts.dll" (ByVal cardNum As Integer,ByVal doType As Integer, ByRef pValue As Long) As Integer
Public Declare Function GT_SetDoBitReverse Lib "gts.dll" (ByVal cardNum As Integer,ByVal doType As Integer, ByVal doIndex As Integer, ByVal value As Integer, ByVal reverseTime As Integer) As Integer
Public Declare Function GT_SetDoMask Lib "gts.dll" (ByVal cardNum As Integer,ByVal doType As Integer, ByVal doMask As Integer, ByVal value As Long) As Integer
Public Declare Function GT_EnableDoBitPulse Lib "gts.dll" (ByVal cardNum As Integer,ByVal doType As Integer, ByVal doIndex As Integer, ByVal highLevelTime As Integer, ByVal lowLevelTime As Integer, ByVal pulseNum As Long, ByVal firstLevel As Integer) As Integer
Public Declare Function GT_DisableDoBitPulse Lib "gts.dll" (ByVal cardNum As Integer,ByVal doType As Integer, ByVal doIndex As Integer) As Integer

Public Declare Function GT_GetDi Lib "gts.dll" (ByVal cardNum As Integer,ByVal diType As Integer, ByRef pValue As Long) As Integer
Public Declare Function GT_GetDiReverseCount Lib "gts.dll" (ByVal cardNum As Integer,ByVal diType As Integer, ByVal diIndex As Integer, ByRef pReverseCount As Long, Optional ByVal count As Integer = 1) As Integer
Public Declare Function GT_SetDiReverseCount Lib "gts.dll" (ByVal cardNum As Integer,ByVal diType As Integer, ByVal diIndex As Integer, ByRef pReverseCount As Long, Optional ByVal count As Integer = 1) As Integer
Public Declare Function GT_GetDiRaw Lib "gts.dll" (ByVal cardNum As Integer,ByVal diType As Integer, ByRef pValue As Long) As Integer

Public Declare Function GT_SetDac Lib "gts.dll" (ByVal cardNum As Integer,ByVal dac As Integer, ByRef pValue As Integer, Optional ByVal count As Integer = 1) As Integer
Public Declare Function GT_GetDac Lib "gts.dll" (ByVal cardNum As Integer,ByVal dac As Integer, ByRef pValue As Integer, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer

Public Declare Function GT_GetAdc Lib "gts.dll" (ByVal cardNum As Integer,ByVal adc As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetAdcValue Lib "gts.dll" (ByVal cardNum As Integer,ByVal adc As Integer, ByRef pValue As Integer, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer

Public Declare Function GT_SetEncPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByVal encPos As Long) As Integer
Public Declare Function GT_GetEncPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetEncPosPre Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetEncVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer

Public Declare Function GT_SetCaptureMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByVal mode As Integer) As Integer
Public Declare Function GT_GetCaptureMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByRef pMode As Integer, Optional ByVal count As Integer = 1) As Integer
Public Declare Function GT_GetCaptureStatus Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByRef pStatus As Integer, ByRef pValue As Long, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_SetCaptureSense Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByVal mode As Integer, ByVal sense As Integer) As Integer
Public Declare Function GT_ClearCaptureStatus Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer) As Integer
Public Declare Function GT_SetCaptureRepeat Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByVal count As Integer) As Integer
Public Declare Function GT_GetCaptureRepeatStatus Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByRef pCount As Integer) As Integer
Public Declare Function GT_GetCaptureRepeatPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByRef pValue As Long, ByVal startNum As Integer, ByVal count As Integer) As Integer

Public Declare Function GT_SetCaptureEncoder Lib "gts.dll" (ByVal cardNum As Integer,ByVal trigger As Integer, ByVal encoder As Integer) As Integer
Public Declare Function GT_GetCaptureWidth Lib "gts.dll" (ByVal cardNum As Integer,ByVal trigger As Integer, ByRef pWidth As Integer, Optional ByVal count As Integer = 1) As Integer
Public Declare Function GT_GetCaptureHomeGpi Lib "gts.dll" (ByVal cardNum As Integer,ByVal trigger As Integer, ByRef pHomeSts As Integer, ByRef pHomePos As Integer, ByRef pGpiSts As Integer, ByRef pGpiPos As Integer, Optional ByVal count As Integer = 1) As Integer

Public Declare Function GT_Reset Lib "gts.dll" (ByVal cardNum As Integer) As Integer
Public Declare Function GT_GetClock Lib "gts.dll" (ByVal cardNum As Integer,ByRef pClock As Long, Optional ByRef pLoop As Long = 0) As Integer
Public Declare Function GT_GetClockHighPrecision Lib "gts.dll" (ByVal cardNum As Integer,ByRef pClock As Long) As Integer

Public Declare Function GT_GetSts Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pSts As Long, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_ClrSts Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, Optional ByVal count As Integer = 1) As Integer
Public Declare Function GT_AxisOn Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer) As Integer
Public Declare Function GT_AxisOff Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer) As Integer
Public Declare Function GT_Stop Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Long, ByVal stopOption As Long) As Integer
Public Declare Function GT_SetPrfPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal prfPos As Long) As Integer
Public Declare Function GT_SynchAxisPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Long) As Integer
Public Declare Function GT_ZeroPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, Optional ByVal count As Integer = 1) As Integer
